# anki-qb

./: .env.example  .gitignore  README.md  naqt_you_gotta_know.py  pyproject.toml
data/: README.md
data/ygk/: NAQT | You Gotta Know.html  https___www_naqt_com_you_gotta_know_20th_century_african_leaders_html.html  https___www_naqt_com_you_gotta_know_20th_century_composers_html.html  https___www_naqt_com_you_gotta_know_20th_century_middle_eastern_leaders_html.html  https___www_naqt_com_you_gotta_know_20th_century_paintings_html.html  https___www_naqt_com_you_gotta_know_20th_century_physicists_html.html  https___www_naqt_com_you_gotta_know_21st_century_quarterbacks_html.html  https___www_naqt_com_you_gotta_know_active_volcanoes_html.html  https___www_naqt_com_you_gotta_know_african_american_authors_html.html  https___www_naqt_com_you_gotta_know_african_american_civil_rights_leaders_html.html  https___www_naqt_com_you_gotta_know_african_bodies_of_water_html.html  https___www_naqt_com_you_gotta_know_american_composers_html.html  https___www_naqt_com_you_gotta_know_american_murders_and_murderers_html.html  https___www_naqt_com_you_gotta_know_american_plays_html.html  https___www_naqt_com_you_gotta_know_american_third_parties_html.html  https___www_naqt_com_you_gotta_know_american_warships_html.html  https___www_naqt_com_you_gotta_know_ancient_empires_html.html  https___www_naqt_com_you_gotta_know_ancient_greek_places_html.html  https___www_naqt_com_you_gotta_know_ancient_greek_plays_html.html  (+161 more)
examples/: generate_flashcards.py
src/anki_qb/: __init__.py  (+7 more)
tests/: __init__.py
